--- a/templates/settings.html
+++ b/templates/settings.html
@@ -96,19 +96,19 @@
     <div class="wrapper wrapper--w900 p-b-50">
         <div class="card card-6">
             <div class="card-heading">
-                <h2 class="title">New Student Entry</h2>
+                <h2 class="title">Remove Student</h2>
             </div>
             <div class="card-body">
-                <form method="POST" action="/NewStudent" enctype="multipart/form-data">
+                <form action="/removeStud" method=POST>
                     <div class="form-row">
-                        <div class="name">Enrollment</div>
+                        <div class="name">Enrollment No.</div>
                         <div class="value">
                             <input class="input--style-6" type='text' name="enum" placeholder="17005010...">
                         </div>
                     </div>
 
                     <div class="card-footer">
-                        <button class="btn btn--radius-2 btn--blue-2" type="submit">Delete</button>
+                        <button class="btn btn--radius-2 btn--blue-2" type="submit">Remove</button>
                     </div>
                 </form>
             </div>
@@ -118,19 +118,26 @@
     <div class="wrapper wrapper--w900 p-b-50">
         <div class="card card-6">
             <div class="card-heading">
-                <h2 class="title">New Student Entry</h2>
+                <h2 class="title">Update Password</h2>
             </div>
             <div class="card-body">
-                <form method="POST" action="/NewStudent" enctype="multipart/form-data">
+                <form action='/updatePswd' method=POST>
                     <div class="form-row">
-                        <div class="name">Enrollment</div>
+                        <div class="name">Enrollment No.</div>
                         <div class="value">
                             <input class="input--style-6" type='text' name="enum" placeholder="17005010...">
                         </div>
                     </div>
 
+                    <div class="form-row">
+                        <div class="name">New Password</div>
+                        <div class="value">
+                            <input class="input--style-6" type='password' name="enum" placeholder="*****...">
+                        </div>
+                    </div>
+
                     <div class="card-footer">
-                        <button class="btn btn--radius-2 btn--blue-2" type="submit">Create Entry</button>
+                        <button class="btn btn--radius-2 btn--blue-2" type="submit">Update</button>
                     </div>
                 </form>
             </div>
