--- a/templates/login.html
+++ b/templates/login.html
@@ -124,7 +124,7 @@
                 <div class="row">
                     <form method="POST" action="/login" class="form-group">
                         <div class="row">
-                            <input type="text" name="username" id="username" class="form__input" placeholder="Username">
+                            <input type="text" name="username" id="username" class="form__input" placeholder="User Id">
                         </div>
                         <div class="row">
                             <!-- <span class="fa fa-lock"></span> -->
@@ -138,7 +138,8 @@
                     </form>
                 </div>
                 <div class="row">
-                    <p>Don't have an account? <a href="#">Register Here</a></p>
+                    <br>
+                    <br>    
                 </div>
             </div>
         </div>
@@ -146,6 +147,6 @@
 </div>
 <!-- Footer -->
 <div class="container-fluid text-center footer">
-    Coded with &hearts; by <a href="https://bit.ly/yinkaenoch">Yinka.</a></p>
+    Coded with &hearts; by <a href="#"">Evision Group</a></p>
 </div>
 {% endblock  %}
