--- a/templates/NewStudent.html
+++ b/templates/NewStudent.html
@@ -39,7 +39,7 @@
                             <div class="name">Name</div>
                             <div class="value">
                                 <div class="input-group">
-                                    <input class="input--style-6" type="text" name="Name" placeholder="Bill Gates">
+                                    <input class="input--style-6" type="text" name="Name" placeholder="Student Name">
                                 </div>
                             </div>
                         </div>
