--- a/templates/statsdaily.html
+++ b/templates/statsdaily.html
@@ -50,7 +50,7 @@
                     <div class="name">Enrollment No. </div>
                     <div class="value">
                         <div class="name">
-                            {{session.username}}
+                            {{eno}}
                         </div><br>
                     </div>
                 </div>
